--- a/dots/.config/quickshell/ii/translations/en_US.json
+++ b/dots/.config/quickshell/ii/translations/en_US.json
@@ -604,5 +604,10 @@
   "Recognize music": "Recognize music",
   "Stroke width": "Stroke width",
   "Use varying shapes for password characters": "Use varying shapes for password characters",
-  "Battery full": "Battery full"
+  "Battery full": "Battery full",
+  "Prayer": "Prayer",
+  "Latitude": "Latitude",
+  "Longitude": "Longitude",
+  "Prayers Option": "Prayers Option",
+  "Coordinates": "Coordinates"
 }
