--- a/dots/.config/quickshell/ii/translations/pt_BR.json
+++ b/dots/.config/quickshell/ii/translations/pt_BR.json
@@ -733,5 +733,6 @@
   "Tint app icons": "Colorir ícones de app",
   "Color picker": "Seletor de cores",
   "Night Light | Right-click to toggle Auto mode": "Luz Noturna | Botão direito para alternar modo Auto",
-  "Inactive": "Inativo"
+  "Inactive": "Inativo",
+  "Prayer": "A Oração"
 }
